<resources>
    <string name="app_name">NoteOnline</string>
    <string name="text_of_splash">ONLINE NOTE</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="don_t_have_an_account">don\'t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">SIGN IN</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="todo">TODO</string>
    <string name="delete">Delete</string>
    <string name="update">Update</string>
    <string name="log_out">Log Out</string>
</resources>