<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    android:background="@color/back_ground"
    tools:context=".ui.noteactivity.MainActivity" >

    <ImageView
        android:id="@+id/imageView"
        android:layout_marginTop="20dp"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center"
        app:srcCompat="@drawable/login"
        android:contentDescription="@string/todo" />

    <EditText
        android:id="@+id/signInEmail"
        android:layout_marginTop="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:drawableStart="@drawable/ic_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/email"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/signInpassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:ems="10"
        android:drawableStart="@drawable/ic_lock"
        android:inputType="textPersonName"
        android:hint="@string/password"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/signIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="25dp"
        android:gravity="center"
        android:layout_marginBottom="70dp"
        android:text="@string/sign_in" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:paddingBottom="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:textSize="20sp"
            android:textStyle="normal"
            android:layout_marginEnd="10dp"
            android:textColor="@color/black"
            android:text="@string/don_t_have_an_account" />
        <TextView
            android:id="@+id/Sign_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#FF0D0D"
            android:textStyle="bold"
            android:textSize="25sp"
            android:text="@string/sign_up" />
    </LinearLayout>

</LinearLayout>